--- a/charts/self-hosted/charts/aserto-authorizer/templates/config-secret.yaml
+++ b/charts/self-hosted/charts/aserto-authorizer/templates/config-secret.yaml
@@ -8,47 +8,53 @@ metadata:
     {{- include "aserto-authorizer.labels" . | nindent 4 }}
 stringData:
   config.yaml: |
-    ---
     # config schema version
-    version: 1
-
+    version: 2
+    
     logging:
       prod: true
       log_level: info
-
+    
     # remote directory is used to resolve the identity for the authorizer.
     remote_directory:
       address: {{ .Release.Name}}-aserto-directory:8282
       api_key: {{ .Values.global.directory.rootKey }}
       tenant_id: "{{ .Values.global.topaz.tenantId }}"
       insecure: true
-
+    
     # default jwt validation configuration
     jwt:
       acceptable_time_skew_seconds: 5 # set as default, 5 secs
-
+    
     api:
-      authorizer:
-        grpc:
-          connection_timeout_seconds: 2
-          listen_address: "0.0.0.0:8282"
-        gateway:
-          listen_address: "0.0.0.0:8383"
-          allowed_origins:
+      health:
+        listen_address: "0.0.0.0:9494"
+      metrics:
+        listen_address: "0.0.0.0:9696"
+        zpages: true
+      services: 
+        authorizer:
+          needs:
+            - reader
+          grpc:
+            connection_timeout_seconds: 2
+            listen_address: "0.0.0.0:8282"
+          gateway:
+            listen_address: "0.0.0.0:8383"
+            allowed_origins:
             - http://localhost
             - http://localhost:*
             - https://localhost
             - https://localhost:*
+            - https://0.0.0.0:*
             - https://*.aserto.com
             - https://*aserto-console.netlify.app
-          http: false
-          read_timeout: 2s
-          read_header_timeout: 2s
-          write_timeout: 2s
-          idle_timeout: 30s
-        health:
-          listen_address: "0.0.0.0:8484"
-
+            http: false
+            read_timeout: 2s
+            read_header_timeout: 2s
+            write_timeout: 2s
+            idle_timeout: 30s
+    
     opa:
       instance_id: "{{ .Values.global.topaz.tenantId }}"
       graceful_shutdown_period_seconds: 2
