--- a/charts/self-hosted/values.yaml
+++ b/charts/self-hosted/values.yaml
@@ -5,7 +5,7 @@
 global:
 
   topaz:
-    version: v3-latest-test-amd64
+    version: 0.30.3
     tenantId: 07f3e43c-a734-11ed-a7a0-002270b772a6
     policyName: policy-todo
     policyImage: ghcr.io/aserto-policies/policy-todo
@@ -13,7 +13,7 @@ global:
     rootKey: 997ec52a856f0911442d1fccc308a408
 
   directory:
-    version: 0.30.4
+    version: 0.30.5
     rootKey: c96fe48da0735cf77fdba50134f52c43
 
   postgresql:
@@ -28,7 +28,7 @@ global:
       database: directory
 
   console:
-    version: 0.0.0-20231101160837.0.ga9673675
+    version: 0.0.0-20231104193835.0.ge7145542
     directoryURL: http://localhost:8080/_directory
     authorizerURL: http://localhost:8080/_authorizer
 
