--- a/charts/self-hosted/charts/aserto-console/templates/configmap.yaml
+++ b/charts/self-hosted/charts/aserto-console/templates/configmap.yaml
@@ -5,5 +5,20 @@ metadata:
   labels:
     {{- include "aserto-console.labels" . | nindent 4 }}
 data:
-  authorizerInstances: |
-    [{"name":"authorizer","url":"{{ .Values.global.console.authorizerURL }}","apiKey":"{{ .Values.global.topaz.rootKey }}"}]
+  configurations: |
+    [
+      {
+        "configurationType": "central_directory",
+        "name": "directory",
+        "directoryServiceUrl": "{{ .Values.global.console.directoryURL }}",
+        "directoryApiKey": "{{ .Values.global.directory.rootKey }}",
+        "directoryTenantId": "{{ .Values.global.topaz.tenantId }}"
+      },
+      {
+        "configurationType": "auto",
+        "name": "authorizer",
+        "address": "{{ .Values.global.console.authorizerURL }}/api/v2/config",
+        "authorizerServiceUrl": "{{ .Values.global.console.authorizerURL }}",
+        "authorizerApiKey": "{{ .Values.global.topaz.rootKey }}"
+      }
+    ]
