self-hosted-directory

--- a/charts/self-hosted/charts/aserto-directory/templates/config-secret.yaml
+++ b/charts/self-hosted/charts/aserto-directory/templates/config-secret.yaml
@@ -36,32 +36,61 @@ stringData:
           durations: true
           gateway: true
 
+    root_db:
+      writer:
+        host: "{{ tpl (.Values.global.postgresql.auth.postgresHost) . }}"
+        port: 5432
+        user: {{ .Values.global.postgresql.auth.postgresUser }}
+        password: "${DIRECTORY_DB_WRITER_PASSWORD}"
+        db_name: {{ .Values.global.directory.ds0.db }}
+        ssl_mode: disable
+        debug_mode: false
+        max_open_conns: 25
+        max_idle_conns: 25
+        conn_max_lifetime: 5
+        query_timeout_seconds: 50
+      reader:
+        host: "{{ tpl (.Values.global.postgresql.auth.postgresHost) . }}"
+        port: 5432
+        user: tenant_reader
+        password: "${DIRECTORY_DB_READER_PASSWORD}"
+        db_name: {{ .Values.global.directory.ds0.db }}
+        ssl_mode: disable
+        debug_mode: false
+        max_open_conns: 25
+        max_idle_conns: 25
+        conn_max_lifetime: 5
     db:
       writer:
         host: "{{ tpl (.Values.global.postgresql.auth.postgresHost) . }}"
         port: 5432
         user: {{ .Values.global.postgresql.auth.postgresUser }}
         password: "${DIRECTORY_DB_WRITER_PASSWORD}"
+        db_name: {{ .Values.global.directory.central.db }}
         ssl_mode: disable
-        db_name: {{ .Values.global.postgresql.auth.database }}
         debug_mode: false
         max_open_conns: 25
         max_idle_conns: 25
         conn_max_lifetime: 5
+        query_timeout_seconds: 50
       reader:
         host: "{{ tpl (.Values.global.postgresql.auth.postgresHost) . }}"
         port: 5432
         user: tenant_reader
         password: "${DIRECTORY_DB_READER_PASSWORD}"
+        db_name: {{ .Values.global.directory.central.db }}
         ssl_mode: disable
-        db_name: {{ .Values.global.postgresql.auth.database }}
         debug_mode: false
         max_open_conns: 25
         max_idle_conns: 25
         conn_max_lifetime: 5
 
     directory:
-      is_root_ds: false
+      root_manifest: /files/manifest.yaml
+      root_ds:
+        address: localhost:8282
+        api_key: {{ .Values.global.directory.ds0.rootKey }}
+        tenant_id: {{ .Values.global.directory.ds0.tenantID }}
 
     nats:
       enabled: false
@@ -72,15 +101,19 @@ stringData:
     authentication:
       authenticators_enabled:
         root_key: true
-        machine_account: false
-        mtls: false
-        auth0: false
+        oidc: false
 
       root_keys:
-        {{ .Values.global.directory.rootKey }}: "root-key-directory-writer@aserto.com"
+        keys:
+          {{ .Values.global.directory.central.rootKey }}: "root-key-directory-writer@aserto.com"
+
+        tenant_overrides:
+          {{ .Values.global.directory.ds0.tenantID }}:
+            {{ .Values.global.directory.ds0.rootKey }}: "no-user"
 
       override:
         - methods:
           - /grpc.reflection.v1alpha.ServerReflection/ServerReflectionInfo
+          - /grpc.reflection.v1.ServerReflection/ServerReflectionInfo
           authenticators_enabled:
             anonymous: true
