--- a/charts/self-hosted/charts/aserto-directory/templates/job-import-sample-data.yaml
+++ b/charts/self-hosted/charts/aserto-directory/templates/job-import-sample-data.yaml
@@ -39,16 +39,16 @@ spec:
               tar zxf grpcurl.tar.gz
 
               while [ $(curl -ksw "%{http_code}" "https://{{ include "aserto-directory.fullname" . }}:8383/" -o /dev/null) -ne 404 ]
-              do 
+              do
                 sleep 5
                 echo "Waiting for the service..."
               done
-         
+
               echo ... Creating directory tenant ...
-              ./grpcurl --insecure -H "authorization: basic {{ .Values.global.directory.rootKey }}" \
+              ./grpcurl --insecure -H "authorization: basic {{ .Values.global.directory.central.rootKey }}" \
                 -d '{"tenant": {"id": "{{ .Values.global.topaz.tenantId }}", "name": "demo"}}' \
                  {{ include "aserto-directory.fullname" . }}:8282 aserto.directory.store.v2.Store.CreateTenant
-   
+
       containers:
         - name: import-sample-data
           image: ghcr.io/aserto-dev/topaz:{{ .Values.global.topaz.version }}
@@ -61,12 +61,12 @@ spec:
             - -c
             - |
               echo ... Importing sample data ...
-              
+
               wget https://raw.githubusercontent.com/aserto-dev/topaz/v{{ .Values.global.topaz.version }}/assets/citadel/manifest.yaml -O manifest.yaml
               wget https://raw.githubusercontent.com/aserto-dev/topaz/v{{ .Values.global.topaz.version }}/assets/citadel/citadel_objects.json -O /data/citadel_objects.json
               wget https://raw.githubusercontent.com/aserto-dev/topaz/v{{ .Values.global.topaz.version }}/assets/citadel/citadel_relations.json -O /data/citadel_relations.json
-              
-              ./topaz manifest set --no-check -i -H {{ include "aserto-directory.fullname" . }}:8282 -k {{ .Values.global.directory.rootKey }} --tenant-id={{ .Values.global.topaz.tenantId }} manifest.yaml
-              
-              ./topaz import --no-check -i -H {{ include "aserto-directory.fullname" . }}:8282 -k {{ .Values.global.directory.rootKey }} --tenant-id={{ .Values.global.topaz.tenantId }} -d /data
-              
+
+              ./topaz manifest set --no-check -i -H {{ include "aserto-directory.fullname" . }}:8282 -k {{ .Values.global.directory.central.rootKey }} --tenant-id={{ .Values.global.topaz.tenantId }} manifest.yaml
+
+              ./topaz import --no-check -i -H {{ include "aserto-directory.fullname" . }}:8282 -k {{ .Values.global.directory.central.rootKey }} --tenant-id={{ .Values.global.topaz.tenantId }} -d /data
+
